// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#components/field/textarea <Field /> With additional props renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
/>
`;

exports[`#components/field/textarea <Field /> With required props renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  name="MOCK NAME"
/>
`;
